Update wedding invitation details for Daniel & Debbie

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Invitación de Boda | Jaime & Abigail</title>
+    <title>Invitación de Boda | Daniel & Debbie</title>
     
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Great+Vibes&display=swap" rel="stylesheet">
     
@@ -14,8 +14,7 @@
     <section id="cover">
         <div class="cover-content">
             <h2 class="script-font">Bienvenidos a la boda de</h2>
-            <h1>Jaime & Abigail</h1>
-            <p>Haz clic para descubrir los detalles</p>
+            <h1>Daniel & Debbie</h1>
             <button id="openInvitation">ABRIR INVITACIÓN</button>
         </div>
     </section>
@@ -43,4 +42,5 @@
 
     <script src="js/script.js"></script>
 </body>
+
 </html>
