Fix HTML structure and update wedding details

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <div class="main-card">
             <p class="script-font">¡Nos Casamos!</p>
-            <h2 class="names">Jaime & Abigail</h2>
+            <h2 class="names">Daniel & Debbie</h2>
             <div class="divider">💍</div>
             
             <div class="message">
@@ -44,3 +44,4 @@
 </body>
 
 </html>
+
